kubernetes/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudshop-app
  labels:
    app.kubernetes.io/part-of: cloudshop
