kubernetes/apps/cloudshop-ci-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudshop-ci-test
  namespace: cloudshop-ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudshop-ci-test
  template:
    metadata:
      labels:
        app: cloudshop-ci-test
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - name: nginx
          image: 172.25.254.105/cloudshop/cloudshop-ci-test:c447ef48
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cloudshop-ci-test
  namespace: cloudshop-ci
spec:
  selector:
    app: cloudshop-ci-test
  ports:
    - port: 80
      targetPort: 80
